# olleth-tmelm-project

./: README.md
clientsecrets/: client_secret_1683724269.csv  client_secret_921138346555-tkrnfubcv6tfebbgkqeb857s9ja7q5vs.apps.googleusercontent.com.json
cloud/: Cargo.toml  client_secret.json
cloud/src/: main.rs
cloud/src/backend/: csvreader.rs  encoder.rs  file.rs  youtubeapi.rs
docs/: README.md
prototype/: Cargo.toml
prototype/src/: gui.rs  main.rs
ycloud/src/: index.html
ycloud/src-tauri/: Cargo.toml  tauri.conf.json
ycloud/src-tauri/src/: main.rs
ycloud/src-tauri/src/backend/: csvreader.rs  encoder.rs  youtubeapi.rs
ycloud/src/css/: style.css
ycloud/src/js/: script.js
