[package]
name = "ycloud"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = { version = "*", features = ["full"] }
hyper-rustls = "0.24.0"
google-youtube3 = "*"
tokio = { version = "1.27.0", features = ["rt-multi-thread"] }
yup-oauth2 = "*"
tokio-util = { version = "*", features = ["codec", "io"] }
mime = "*"
image = "*"
rayon = "*"
im = "*"
time = "*"
chrono = "*"
memmap = "*"
itertools = "*"
regex = "*"
rand = "*"
csv = "*"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
